# torture

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.tf  outputs.tf  pyproject.toml  variables.tf
modules/many-modules/: main.tf
modules/many-providers/: main.tf
src/torture/: cmd.py  git.py  modulegen.py
