[project]
name = "torture"
version = "0.1.0"
description = "The IACP pipeline test generator and framework for OpenTofu/Terraform automations."
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = ["jinja2==3.1", "click==8.3"]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
torture = "src.torture.cmd:cli"
